# CodeCraftWeekends-2025-03

./: .gitignore  LICENSE  README.md  get_data.sh  makefile  pyproject.toml
data/retros/: 2025-03-09.md
data/unit_test/: real_acc.txt
src/hcad_star_schema/: __init__.py  test_it_works.py
src/hcad_star_schema/domain/real_estate/account_owner/: account_owner.py  account_owner_source.py  parcel.py  parcel_source.py  test_tab_separated_account_owner_source_should.py
src/hcad_star_schema/domain/real_estate/parcel/: parcel_source.py  test_tab_separated_parcel_source_should.py
src/hcad_star_schema/infrastructure/tab_separated/real_estate/: tab_separated_account_owner_source.py
src/hcad_star_schema/tests/: test_it_works.py
